--- a/public/checkout.html
+++ b/public/checkout.html
@@ -1166,7 +1166,7 @@ const cartForPayment = cart.map(item => {
         }
         
         // Create Stripe payment session
-        const response = await fetch('https://senkisem.onrender.com/create-payment-session', {
+        const response = await fetch('/create-payment-session', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
