--- a/public/checkout2.html
+++ b/public/checkout2.html
@@ -163,7 +163,7 @@ document.addEventListener('DOMContentLoaded', () => {
         }));
 
         try {
-            const response = await fetch('https://senkisem.onrender.com/create-payment-session', { 
+            const response = await fetch('/create-payment-session', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
