remove vid merch test

--- a/public/markabolt.html
+++ b/public/markabolt.html
@@ -4120,7 +4120,7 @@ padding: 0.8rem;
     <div class="hero-background">
         <canvas class="background-watermark"></canvas>
         <video class="hero-bg-video" autoplay muted loop playsinline>
-            <source src="assets/img/merchvid.mp4" type="video/mp4">
+            <source src="assets/img/" type="video/mp4">
         </video>
     </div>
     
