--- a/public/markabolt.html
+++ b/public/markabolt.html
@@ -2839,9 +2839,12 @@ background: rgba(255, 255, 255, 0.02);
 
        
         .btn {
-            padding: 0.6rem 0.8rem;
-            font-size: 0.7rem;
-        }
+    padding: 0.5rem 0.6rem;
+    font-size: 0.65rem;
+}
+.product-actions {
+    gap: 0.5rem;
+}
 
         .modal-body {
             grid-template-columns: 1fr;
@@ -2964,9 +2967,13 @@ padding: 0.8rem;
         }
 
         .btn {
-            padding: 0.5rem 0.6rem;
-            font-size: 0.65rem;
-        }
+    padding: 0.4rem 0.5rem;
+    font-size: 0.6rem;
+}
+
+    .product-actions {
+    gap: 0.4rem;
+}
 
         .modal-header {
             padding: 0.8rem;
