--- a/download-error.html
+++ b/download-error.html
@@ -242,14 +242,14 @@
           <strong>Ellenőrizd az emailedet:</strong> Keresd meg az eredeti rendelési visszaigazolást a Senkisem.hu-tól. 
           Győződj meg róla, hogy a helyes letöltési linket használod.<br><br>
           <strong>Ügyfélszolgálat:</strong> Ha a probléma továbbra is fennáll, kérjük, lépj velünk kapcsolatba a 
-          <a href="mailto:orders@senkisem.hu" class="contact-email">rendeles@senkisem.hu</a> 
+          <a href="mailto:info@senkisem.com" class="contact-email">info@senkisem.com</a> 
           címen, és új letöltési linket küldünk.
         </p>
       </div>
 
       <div class="button-group">
         <a href="/" class="btn btn-primary">Vissza a főoldalra</a>
-        <a href="mailto:orders@senkisem.hu" class="btn btn-secondary">Ügyfélszolgálat</a>
+        <a href="mailto:info@senkisem.com" class="btn btn-secondary">Ügyfélszolgálat</a>
       </div>
     </div>
 
