--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
       "url": "https://senkisem.hu/",
       "logo": "https://senkisem.hu/img/favicon.svg",
       "description": "Magyar streetwear márka egyedi identitással. Limitált kollekciók: Sakura Heritage, Phantom, Signature.",
-      "email": "senkisem.info@gmail.com",
+      "email": "info@senkisem.com",
       "sameAs": [
         "https://www.instagram.com/senkisem.hu/",
         "https://www.tiktok.com/@senkisem.hu"
