--- a/public/success2.html
+++ b/public/success2.html
@@ -537,7 +537,7 @@ body {
     <div class="footer-links">
   <p class="info-text">
     <i class="ri-customer-service-2-line"></i>
-    Kérdés esetén: senkisem.info@gmail.com
+    Kérdés esetén: info@senkisem.com
   </p>
   <p class="info-text">
     <i class="ri-file-text-line"></i>
