--- a/public/cancel.html
+++ b/public/cancel.html
@@ -465,7 +465,7 @@
     <div class="footer-links">
   <p class="info-text">
     <i class="ri-customer-service-2-line"></i>
-    Kérdés esetén: senkisem.info@gmail.com
+    Kérdés esetén: info@senkisem.com
   </p>
   <p class="info-text">
     <i class="ri-file-text-line"></i>
