--- a/public/konyvek.html
+++ b/public/konyvek.html
@@ -712,7 +712,7 @@
                             <path d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-.04-.1z"/>
                         </svg>
                     </a>
-                    <a href="mailto:senkisem.info@gmail.com" class="social-icon">
+                    <a href="mailto:info@senkisem.com" class="social-icon">
                         <i class="ri-mail-line"></i>
                     </a>
                 </div>
@@ -720,7 +720,7 @@
             <div class="footer-section">
                 <h3>Ügyfélszolgálat</h3>
                 <ul class="footer-links">
-                    <li><a href="#contact">senkisem.info@gmail.com</a></li>
+                    <li><a href="#contact">info@senkisem.com</a></li>
                 </ul>
             </div>
             <div class="footer-section">
