--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Senkisem - Nem egy Brand; Üzenet | Streetwear, Könyvek, Filozófia</title>
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9GKMR41DYX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9GKMR41DYX');
+</script>
     <!-- Basic SEO -->
     <meta name="description" content="Senkisem - Nem egy brand; üzenet. Magyar streetwear márka limitált kollekcióval: Sakura Heritage, Phantom, Signature. Jegyzetek egy Idegentől könyv: önismereti napló digitális korhoz. Használati Útmutató az Élethez. Urban fashion, filozófia és közösség egy helyen.">
     <meta name="keywords" content="senkisem, senkisem brand, magyar streetwear, urban fashion hungary, limitált ruházat, jegyzetek egy idegentől, önismereti könyv, Használati Útmutató az Élethez Könyv, Shadow Garden, phantom kollekció, signature edition, magyar fashion brand, streetwear budapest, cyberpunk fashion, japán stílus ruházat, kimono modern, városi divat, alternatív fashion, underground streetwear, digitális generáció, önismeret könyv 2026, Használati Útmutató az Élethez, magyar influencer brand, tiktok brand, instagram fashion, limitált darabok, exkluzív kollekció, prémium streetwear, magyar design, hazai márka, senkisem.hu, senkisem póló, senkisem pulóver, senkisem könyv, senkisem óra, senkisem kiegészítők">
