--- a/public/konyvek.html
+++ b/public/konyvek.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Senkisem - Könyvek</title>
     <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg" />
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9GKMR41DYX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9GKMR41DYX');
+</script>
     <!-- SEO Meta Tags -->
     <meta name="description" content="Senkisem könyvek - Válassz a Jegyzetek egy Idegentől és a Használati Útmutató az Élethez között.">
     <meta name="keywords" content="senkisem könyvek, jegyzetek egy idegentől, használati útmutató az élethez">
