--- a/public/markabolt.html
+++ b/public/markabolt.html
@@ -6,6 +6,15 @@
     <title>Senkisem Ruházat - Kollekciók </title>
     <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg" />
     <meta name="description" content="A Senkisem egyedülálló interaktív napló, önismereti könyv és ruházati márka, amely a nem-megfelelésről és a belső szabadságról szól.">
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9GKMR41DYX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9GKMR41DYX');
+</script>
     <!-- SEO Meta Tags -->
 <meta name="description" content="Senkisem Márkabolt - Egyedi streetwear kollekciók. Sakura Heritage, Phantom és Signature kollekciók. Premium minőségű urban fashion limitált példányszámban.">
 <meta name="keywords" content="senkisem márkabolt, streetwear hungary, urban fashion, magyar streetwear, limitált ruházat, sakura kollekció, phantom collection">
