--- a/public/utmutato.html
+++ b/public/utmutato.html
@@ -5,6 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg" />
         <title> Senkisem - Jegyzetek Egy Idegentől</title>
+       <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9GKMR41DYX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9GKMR41DYX');
+</script>
         <!-- SEO Meta Tags -->
 <meta name="description" content="Senkisem - Jegyzetek egy Idegentől. Egy könyv, ami kérdez, szétszed, majd újrarendez. Nem mesél történetet, nem ad tanácsokat. Rólad szól.">
 <meta name="keywords" content="jegyzetek egy idegentől, senkisem könyv, magyar önismereti könyv, filozofikus könyv, gondolatok könyv">
